--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ img {
   clear: both;
 }
 
+/*  
 *{
   margin: 0;
   padding: 0;
@@ -101,3 +102,14 @@ img {
 #why .container.grey {
   background: #eff0ac;
 }
+*/
+
+
+
+
+
+
+
+
+
+
