--- a/style.css
+++ b/style.css
@@ -104,7 +104,13 @@ img {
 }
 */
 
-
+@media screen and (max-width: 480px) {
+  #lezioni .row>.right, #lezioni .row>.left {
+    background: red;
+    margin: auto;
+    float: none;
+  }
+}
 
 
 
